jenkinsci/jenkins/gateway.yaml
# jenkinsci/jenkins/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jenkins-gateway
  namespace: jenkins
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "jenkins.minseoky.me"
      tls:
        mode: Terminate
        certificateRefs:
          - name: jenkins-cert
            kind: Secret
    - name: http
      port: 80
      protocol: HTTP
      hostname: "jenkins.minseoky.me"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins
spec:
  parentRefs:
    - name: jenkins-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins
          port: 8080
